# Dota2counterpick

./: .gitignore  backend.md  backend_diagram_fixed.md  init.md
info/: core.md  getrepo.py  web.md
ingestion_service/: .env.example  Dockerfile  README.md  code.md  export_codebase.py  full_codebase.md  pyproject.toml  requirements.txt
ingestion_service/app/: main.py
ingestion_service/app/api/v1/: schemas.py
ingestion_service/app/api/v1/endpoints/: ingestion_endpoint.py
ingestion_service/app/application/ports/: kafka_producer_port.py  match_stream_port.py  message_publisher.py
ingestion_service/app/application/use_cases/: ingest_match_ids_use_case.py
ingestion_service/app/core/: config.py  logging_config.py
ingestion_service/app/domain/: exceptions.py  models.py
ingestion_service/app/infrastructure/api/: server.py
ingestion_service/app/infrastructure/api/v1/endpoints/: health.py
ingestion_service/app/infrastructure/kafka/: aiokafka_producer_adapter.py
ingestion_service/app/infrastructure/match_stream/: opendota_stream_adapter.py
ingestion_service/tests/unit/: test_domain_models.py  test_process_match_stream_use_case.py
